--- a/src/locales/ru/logic.json
+++ b/src/locales/ru/logic.json
@@ -1,7 +1,7 @@
 {
   "loseHP": "-1 ❤️",
-  "loseHPWithWarning": "$t(loseHP) Осторожнее! Осталось 2 ХП",
-  "loseHPWithLastWarning": "$t(loseHP) Внимание! Последнее ХП",
+  "loseHPWithWarning": "$t(logic:loseHP) Осторожнее! Осталось 2 ХП",
+  "loseHPWithLastWarning": "$t(logic:loseHP) Внимание! Последнее ХП",
   "8hoursWarning": "Осталось 8 часов. Кто-нибудь позвоните Кириллу, чтобы он сделал пост.",
   "4hoursWarning": "Осталось 4 часа. Поста все еще нет, видимо всему приходит конец.",
   "1hoursWarning": "Остался час. Значит, все так и должно быть.",
