add hearts to msg

--- a/config/locales/ru/logic.json
+++ b/config/locales/ru/logic.json
@@ -1,9 +1,9 @@
 {
-  "loseHP": "-1 ❤️",
-  "loseHPWithWarning": "$t(logic:loseHP) Осторожнее! Осталось 2 ХП",
-  "loseHPWithLastWarning": "$t(logic:loseHP) Внимание! Последнее ХП",
+  "loseHP": "{{ val, display-hearts }}",
+  "loseHPWithWarning": "❤️❤️🖤🖤🖤 Хочу кушать!",
+  "loseHPWithLastWarning": "❤️🖤🖤🖤🖤 Покормите меня! Последнее ❤️",
   "8hoursWarning": "Осталось 8 часов. Кто-нибудь позвоните Кириллу, чтобы он сделал пост.",
-  "4hoursWarning": "Осталось 4 часа. Поста все еще нет, видимо всему приходит конец.",
+  "4hoursWarning": "Осталось 4 часа. Еды все еще нет, видимо всему приходит конец.",
   "1hoursWarning": "Остался час. Значит, все так и должно быть.",
   "10minWarning": "Осталось 10 минут. Последнее, что хотелось бы сказать: делайте все с легкой руки!"
 }
