--- a/config/locales/ru/logic.json
+++ b/config/locales/ru/logic.json
@@ -1,7 +1,7 @@
 {
   "loseHP": "{{ val, display-hearts }}",
-  "loseHPWithWarning": "❤️❤️🖤🖤🖤 Хочу кушать!",
-  "loseHPWithLastWarning": "❤️🖤🖤🖤🖤 Покормите меня! Последнее ❤️",
+  "loseHPWithWarning": "$t(logic:loseHP) Хочу кушать!",
+  "loseHPWithLastWarning": "$t(logic:loseHP) Покормите меня! Последнее ❤️",
   "8hoursWarning": "Осталось 8 часов. Кто-нибудь позвоните Кириллу, чтобы он сделал пост.",
   "4hoursWarning": "Осталось 4 часа. Еды все еще нет, видимо всему приходит конец.",
   "1hoursWarning": "Остался час. Значит, все так и должно быть.",
